--- a/notmain/food.html
+++ b/notmain/food.html
@@ -11,7 +11,7 @@
     <h1>울릉도</h1>
     <nav>
       <span>
-        <a href="/ulleung_main_test.html" target="_blank">메인페이지</a>
+        <a href="/index.html" target="_blank">메인페이지</a>
       </span>
       <span>
         <a href="./ulleung_fp.html" target="_blank">가는법</a>
