--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>울릉도 여행 도움 사이트</title>
-    <link rel="stylesheet" href="./ulleung_main_test.css">
+    <link rel="stylesheet" href="./index.css">
 </head>
 <body>
 <div class="main_bg">
